--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.0.15) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Jun 2015 22:32:00 +0200
+
 openmediavault (2.0.14) stable; urgency=low
 
   * Update locales.
