* Update locales. * Fix dependency bug in WebGUI.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (2.0.15) stable; urgency=low
 
-  *
+  * Various improvements.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Jun 2015 22:32:00 +0200
 
