--- a/deb/openmediavault-owncloud/debian/changelog
+++ b/deb/openmediavault-owncloud/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-owncloud (2.0.1) stable; urgency=low
+
+  * Update locales.
+  * Fix dependency bug in WebGUI.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 23 Jun 2015 00:14:08 +0200
+
 openmediavault-owncloud (2.0) stable; urgency=low
 
   * Update locales.
