--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/fr_FR/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/fr_FR/openmediavault-owncloud.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Benoit Maliar <maliarbenoit@msn.com>, 2014
+# Benoit Maliar <maliarbenoit@msn.com>, 2014-2015
 # Christophe Lherieau <skimpax@gmail.com>, 2013-2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-16 23:45+0000\n"
+"Last-Translator: Benoit Maliar <maliarbenoit@msn.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,7 +56,7 @@ msgid "Shares"
 msgstr "Partages"
 
 msgid "Show"
-msgstr ""
+msgstr "Afficher"
 
 msgid "The SSL certificate."
 msgstr "Le certificat SSL à utiliser."
