--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/gl/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/gl/openmediavault-owncloud.po
@@ -4,14 +4,14 @@
 # 
 # Translators:
 # Miguel Anxo Bouzada <mbouzada@gmail.com>, 2013-2014
-# Miguel Anxo Bouzada <mbouzada@gmail.com>, 2014
+# Miguel Anxo Bouzada <mbouzada@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-02 09:12+0000\n"
+"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician (http://www.transifex.com/projects/p/openmediavault/language/gl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,7 +56,7 @@ msgid "Shares"
 msgstr "Comparticións"
 
 msgid "Show"
-msgstr ""
+msgstr "Amosar"
 
 msgid "The SSL certificate."
 msgstr "O certificado SSL"
