--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/it_IT/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/it_IT/openmediavault-owncloud.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-01 19:46+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,7 +55,7 @@ msgid "Shares"
 msgstr "Condivisioni"
 
 msgid "Show"
-msgstr ""
+msgstr "Mostra"
 
 msgid "The SSL certificate."
 msgstr "Il certificato SSL."
