--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/tr_TR/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/tr_TR/openmediavault-owncloud.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Serhat SUT <serhat.sut@gmail.com>, 2013-2014
+# Serhat SUT <serhat.sut@gmail.com>, 2013-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-03 19:23+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/projects/p/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,7 +55,7 @@ msgid "Shares"
 msgstr "Paylaşımlar"
 
 msgid "Show"
-msgstr ""
+msgstr "Göster"
 
 msgid "The SSL certificate."
 msgstr "SSL sertifikası."
