--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (2.1) stable; urgency=low
+
+  * Use the correct environment variables OMV_SSL_CERTIFICATE_DIR
+    and OMV_SSL_CERTIFICATE_PREFIX.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 26 Jun 2015 15:05:22 +0200
+
 openmediavault (2.0.15) stable; urgency=low
 
   * Various improvements.
