--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/cs_CZ/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/cs_CZ/openmediavault-owncloud.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-26 14:59+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,7 +56,7 @@ msgid "Shares"
 msgstr "Sdílení"
 
 msgid "Show"
-msgstr ""
+msgstr "Zobrazit"
 
 msgid "The SSL certificate."
 msgstr "SSL certifikát."
