--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (2.1) stable; urgency=low
 
+  * Update locales.
   * Use the correct environment variables OMV_SSL_CERTIFICATE_DIR
     and OMV_SSL_CERTIFICATE_PREFIX.
 
