--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-11 22:38+0200\n"
-"PO-Revision-Date: 2015-06-11 20:38+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-26 15:08+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -199,19 +199,19 @@ msgid "Add"
 msgstr "Přidat"
 
 msgid "Add VLAN connection"
-msgstr ""
+msgstr "Přidat VLAN připojení"
 
 msgid "Add Wi-Fi connection"
-msgstr ""
+msgstr "Přidat Wi-Fi připojení"
 
 msgid "Add bond connection"
-msgstr ""
+msgstr "Přidat spřažené připojení"
 
 msgid "Add devices to RAID device"
 msgstr "Přidat zařízení do RAID pole"
 
 msgid "Add ethernet connection"
-msgstr ""
+msgstr "Přidat ethernetové připojení"
 
 msgid "Add firewall rule"
 msgstr "Přidat pravidlo firewallu"
@@ -226,7 +226,7 @@ msgid "Add module"
 msgstr "Přidat modul"
 
 msgid "Add public key"
-msgstr ""
+msgstr "Přidat veřejnou část klíče"
 
 msgid "Add rsync job"
 msgstr "Přidat úlohu rsync"
@@ -979,7 +979,7 @@ msgid "Domain name"
 msgstr "Název domény"
 
 msgid "Domains used when resolving host names."
-msgstr ""
+msgstr "Domény, použité při překládání názvů hostitelů."
 
 msgid "Dominica"
 msgstr "Dominika"
@@ -1026,22 +1026,22 @@ msgid "Edit"
 msgstr "Upravit"
 
 msgid "Edit SSH certificate"
-msgstr ""
+msgstr "Upravit SSH certifikát"
 
 msgid "Edit SSL certificate"
 msgstr "Upravit SSL certifikát"
 
 msgid "Edit VLAN connection"
-msgstr ""
+msgstr "Upravit VLAN připojení"
 
 msgid "Edit Wi-Fi connection"
-msgstr ""
+msgstr "Upravit Wi-Fi připojení"
 
 msgid "Edit bond connection"
-msgstr ""
+msgstr "Upravit spřažené připojení"
 
 msgid "Edit ethernet connection"
-msgstr ""
+msgstr "Upravit ethernetové připojení"
 
 msgid "Edit firewall rule"
 msgstr "Upravit pravidlo firewallu"
@@ -1529,7 +1529,7 @@ msgid "ID"
 msgstr "ID"
 
 msgid "IP addresses of domain name servers used to resolve host names."
-msgstr ""
+msgstr "IP adresa či doménový název serverů, sloužících pro překládání názvů hostitelů."
 
 msgid "IPv4"
 msgstr "IPv4"
@@ -1603,7 +1603,7 @@ msgid "Import"
 msgstr "Importovat"
 
 msgid "Import SSH certificate"
-msgstr ""
+msgstr "Importovat SSH certifikát"
 
 msgid "Import SSL certificate"
 msgstr "Importovat SSL certifikát"
@@ -1683,7 +1683,7 @@ msgid "Interfaces"
 msgstr "Síťová rozhraní"
 
 msgid "Invalid SSH public key (RFC 4716)"
-msgstr ""
+msgstr "Neplatná veřejná část SSH klíče (dle normy RFC 4716)"
 
 msgid "Invalid domain name"
 msgstr "Neplatný doménový název"
@@ -2118,10 +2118,10 @@ msgid "Network"
 msgstr "Síť"
 
 msgid "Network interface '%s' (type=%s) already exists"
-msgstr ""
+msgstr "Síťové rozhraní %s (typ=%s) již existuje"
 
 msgid "Network interfaces"
-msgstr ""
+msgstr "Síťová rozhraní"
 
 msgid "Neutral Zone"
 msgstr "Neutrální zóna"
@@ -2343,7 +2343,7 @@ msgid "Perform a trial run with no changes made"
 msgstr "Vyzkoušet bez provedení změn"
 
 msgid "Performance statistics"
-msgstr ""
+msgstr "Statistiky ohledně výkonnosti"
 
 msgid "Period of validity"
 msgstr "Období platnosti"
@@ -2543,13 +2543,13 @@ msgid "Public"
 msgstr "Veřejné"
 
 msgid "Public key"
-msgstr ""
+msgstr "Veřejný klíč"
 
 msgid "Public key authentication"
 msgstr "Ověřování pomocí kryptografie s veřejným klíčem"
 
 msgid "Public keys"
-msgstr ""
+msgstr "Veřejné části klíčů"
 
 msgid "Puerto Rico"
 msgstr "Portoriko"
@@ -2873,7 +2873,7 @@ msgid "Security level"
 msgstr "Úroveň zabezpečení"
 
 msgid "Select a SSH certificate ..."
-msgstr ""
+msgstr "Vyberte SSH certifikát…"
 
 msgid "Select a SSL certificate ..."
 msgstr "Vyberte SSL certifikát …"
@@ -3169,7 +3169,7 @@ msgstr "Určuje, zda je dovoleno přihlašovat se jako správce systému (root).
 msgid ""
 "Specifies whether the system performance statistics are collected "
 "periodically."
-msgstr ""
+msgstr "Určuje, zda pravidelně shromažďovat statistiky ohledně výkonnosti systému."
 
 msgid ""
 "Specifies whether to monitor the system status and select the most "
@@ -3306,7 +3306,7 @@ msgid "The RSA key length."
 msgstr "Délka RSA klíče."
 
 msgid "The RSA public key in OpenSSH format."
-msgstr ""
+msgstr "Veřejná část RSA klíče ve formátu, jaký používá OpenSSH."
 
 msgid "The SSL certificate."
 msgstr "SSL certifikát."
@@ -3407,10 +3407,10 @@ msgid ""
 msgstr "Oprávnění pro nově vytvářené soubory a složky jsou běžně řízeny maskou pro vytváření a maskou složky, ale parametr pro přebírání oprávnění toto přebíjí. Užitečné zejména na systémech, sloužících mnoha uživatelům, kdy je třeba, aby sdílení mohla být pružně používána každým z uživatelů."
 
 msgid "The private RSA key in X.509 PEM format."
-msgstr ""
+msgstr "Soukromá část RSA klíče ve formátu PEM dle normy X.509."
 
 msgid "The public key in RFC 4716 SSH public key file format."
-msgstr ""
+msgstr "Veřejná část SSH klíče ve formátu dle normy RFC 4716."
 
 msgid ""
 "The repository will be checked for new, removed or upgraded software "
@@ -3709,7 +3709,7 @@ msgid "Tonga"
 msgstr "Tonga"
 
 msgid "Total"
-msgstr ""
+msgstr "Celkem"
 
 msgid "Transfer log"
 msgstr "Protokol o přenosu"
@@ -3946,7 +3946,7 @@ msgid "Vietnam"
 msgstr "Vietnam"
 
 msgid "VirtIO device"
-msgstr ""
+msgstr "VirtIO zařízení"
 
 msgid "Volume"
 msgstr "Svazek"
