--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/es_ES/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/es_ES/openmediavault-lvm2.po
@@ -5,14 +5,14 @@
 # Translators:
 # Antonio Pelaez Redondo <antorayman@gmail.com>, 2012
 # jmcainzos <jmcainzos@vodafone.es>, 2012
-# Raul Fernandez Garcia <raulfg3@gmail.com>, 2012-2014
+# Raul Fernandez Garcia <raulfg3@gmail.com>, 2012-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-01 21:08+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -62,7 +62,7 @@ msgid "Do you really want to create the volume group?"
 msgstr "¿Está seguro de que quiere crear el grupo de volúmenes?"
 
 msgid "Do you really want to resize the selected physical volume?"
-msgstr ""
+msgstr "¿Realmente desea redimensionar el volumen seleccionado?"
 
 msgid "Edit logical volume"
 msgstr "Editar volumen lógico"
@@ -80,25 +80,25 @@ msgid "Extend volume group"
 msgstr "Ampliar grupo de volúmenes"
 
 msgid "Failed to create logical volume: %s"
-msgstr ""
+msgstr "Error al crear un volumen lógico: %s"
 
 msgid "Failed to create physical volume: %s"
-msgstr ""
+msgstr "Error al crear un volumen físico: %s"
 
 msgid "Failed to create volume group: %s"
-msgstr ""
+msgstr "Error al crear un grupo de volumenes: %s"
 
 msgid "Failed to extend logical volume: %s"
-msgstr ""
+msgstr "Error al extender un volumen lógico: %s"
 
 msgid "Failed to extend volume group: %s"
-msgstr ""
+msgstr "Error al extender un grupo de volumenes: %s"
 
 msgid "Failed to reduce logical volume: %s"
-msgstr ""
+msgstr "Error al reducir un volumen lógico: %s"
 
 msgid "Failed to reduce volume group: %s"
-msgstr ""
+msgstr "Error al reducir un grupo de volumenes: %s"
 
 msgid "Failed to remove logical volume: %s"
 msgstr "Fallo al borrar el volúmen lógico: %s"
@@ -110,13 +110,13 @@ msgid "Failed to remove volume group: %s"
 msgstr "Fallo al borrar el grupo de volúmenes: %s"
 
 msgid "Failed to rename logical volume: %s"
-msgstr ""
+msgstr "Error al renombrar un volumen lógico: %s"
 
 msgid "Failed to rename volume group: %s"
-msgstr ""
+msgstr "Error al renombrar un grupo de volumenes: %s"
 
 msgid "Failed to resize physical volume: %s"
-msgstr ""
+msgstr "Error al redimensionar un volumen físico: %s"
 
 msgid "Free"
 msgstr "Libre"
@@ -155,7 +155,7 @@ msgid "Reduce volume group"
 msgstr "Reducir grupo de volúmenes"
 
 msgid "Resize"
-msgstr ""
+msgstr "Redimensionar"
 
 msgid "Select a volume group ..."
 msgstr "Seleccione un grupo de volúmenes ..."
