--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/cs_CZ/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/cs_CZ/openmediavault-lvm2.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Pavel Borecki <pavel.borecki@gmail.com>, 2014
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-26 15:11+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,7 +60,7 @@ msgid "Do you really want to create the volume group?"
 msgstr "Opravdu chcete vytvořit skupinu svazků?"
 
 msgid "Do you really want to resize the selected physical volume?"
-msgstr ""
+msgstr "Opravdu chcete změnit velikost označeného fyzického svazku?"
 
 msgid "Edit logical volume"
 msgstr "Upravit logický svazek"
@@ -78,25 +78,25 @@ msgid "Extend volume group"
 msgstr "Rozšířit skupinu svazků"
 
 msgid "Failed to create logical volume: %s"
-msgstr ""
+msgstr "Nezdařilo se vytvořit logický svazek: %s"
 
 msgid "Failed to create physical volume: %s"
-msgstr ""
+msgstr "Nezdařilo se vytvořit fyzický svazek: %s"
 
 msgid "Failed to create volume group: %s"
-msgstr ""
+msgstr "Nezdařilo se vytvořit skupinu svazků (vg): %s"
 
 msgid "Failed to extend logical volume: %s"
-msgstr ""
+msgstr "Nezdařilo se zvětšit logický svazek (lv): %s"
 
 msgid "Failed to extend volume group: %s"
-msgstr ""
+msgstr "Nezdařilo se rozšířit skupinu svazků (vg): %s"
 
 msgid "Failed to reduce logical volume: %s"
-msgstr ""
+msgstr "Nezdařilo se zmenšit velikost logického svazku (lv): %s"
 
 msgid "Failed to reduce volume group: %s"
-msgstr ""
+msgstr "Nezdařilo se zredukovat skupinu svazků (vg): %s"
 
 msgid "Failed to remove logical volume: %s"
 msgstr "Logický svazek nelze odebrat: %s"
@@ -108,13 +108,13 @@ msgid "Failed to remove volume group: %s"
 msgstr "Nelze odebrat svazek skupin: %s"
 
 msgid "Failed to rename logical volume: %s"
-msgstr ""
+msgstr "Nezdařilo se přejmenovat logický svazek: %s"
 
 msgid "Failed to rename volume group: %s"
-msgstr ""
+msgstr "Nezdařilo se přejmenovat skupinu svazků: %s"
 
 msgid "Failed to resize physical volume: %s"
-msgstr ""
+msgstr "Nezdařilo se změnit velikost fyzického svazku: %s"
 
 msgid "Free"
 msgstr "Volné"
@@ -153,7 +153,7 @@ msgid "Reduce volume group"
 msgstr "Zmenšit skupinu svazků"
 
 msgid "Resize"
-msgstr ""
+msgstr "Změnit velikost"
 
 msgid "Select a volume group ..."
 msgstr "Vybrat skupinu svazků (vg)..."
