--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/fr_FR/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/fr_FR/openmediavault-lvm2.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Benoit Maliar <maliarbenoit@msn.com>, 2015
 # Christophe Lherieau <skimpax@gmail.com>, 2012-2014
 # Stéphane BOCQUET <sbocquet4772@gmail.com>, 2012
 msgid ""
@@ -10,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-16 23:49+0000\n"
+"Last-Translator: Benoit Maliar <maliarbenoit@msn.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,7 +62,7 @@ msgid "Do you really want to create the volume group?"
 msgstr "Voulez-vous créer le groupe de volumes?"
 
 msgid "Do you really want to resize the selected physical volume?"
-msgstr ""
+msgstr "Voulez-vous vraiment redimensionner le volume physique sélectionné ?"
 
 msgid "Edit logical volume"
 msgstr "Modifier le volume logique"
@@ -79,25 +80,25 @@ msgid "Extend volume group"
 msgstr "Agrandir le groupe de volumes"
 
 msgid "Failed to create logical volume: %s"
-msgstr ""
+msgstr "Échec lors de la création du volume logique: %s"
 
 msgid "Failed to create physical volume: %s"
-msgstr ""
+msgstr "Échec lors de la création du volume physique: %s"
 
 msgid "Failed to create volume group: %s"
-msgstr ""
+msgstr "Échec lors de la création du groupe de volume: %s"
 
 msgid "Failed to extend logical volume: %s"
-msgstr ""
+msgstr "Échec lors de l'extension du volume logique: %s"
 
 msgid "Failed to extend volume group: %s"
-msgstr ""
+msgstr "Échec lors de l'extension du groupe de volume: %s"
 
 msgid "Failed to reduce logical volume: %s"
-msgstr ""
+msgstr "Échec lors de la réduction du volume logique: %s"
 
 msgid "Failed to reduce volume group: %s"
-msgstr ""
+msgstr "Échec lors de la réduction du groupe de volume: %s"
 
 msgid "Failed to remove logical volume: %s"
 msgstr "Echec lors de la suppression du volume logique : %s"
@@ -109,13 +110,13 @@ msgid "Failed to remove volume group: %s"
 msgstr "Echec lors de la suppression du groupe de volume : %s"
 
 msgid "Failed to rename logical volume: %s"
-msgstr ""
+msgstr "Échec lors du renommage du volume logique: %s"
 
 msgid "Failed to rename volume group: %s"
-msgstr ""
+msgstr "Échec lors du renommage du groupe de volume: %s"
 
 msgid "Failed to resize physical volume: %s"
-msgstr ""
+msgstr "Échec lors du redimensionnement du volume physique: %s"
 
 msgid "Free"
 msgstr "Libérer"
@@ -154,7 +155,7 @@ msgid "Reduce volume group"
 msgstr "Réduire le groupe de volumes"
 
 msgid "Resize"
-msgstr ""
+msgstr "Redimensionner"
 
 msgid "Select a volume group ..."
 msgstr "Sélectionnez un groupe de volumes ..."
