--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/hu_HU/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/hu_HU/openmediavault-lvm2.po
@@ -5,14 +5,14 @@
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
 # mersaint <mersaint@gmail.com>, 2012
-# Grawens <szabolcs.szanyi@gmail.com>, 2014
+# Grawens <szabolcs.szanyi@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-25 15:10+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/projects/p/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -62,7 +62,7 @@ msgid "Do you really want to create the volume group?"
 msgstr "Valóban létre szeretnéd hozni a kötet csoportot?"
 
 msgid "Do you really want to resize the selected physical volume?"
-msgstr ""
+msgstr "Valóban át szeretnéd méretezni a kiválasztott fizikai kötetet?"
 
 msgid "Edit logical volume"
 msgstr "Logikai kötet szerkesztése"
@@ -80,25 +80,25 @@ msgid "Extend volume group"
 msgstr "Kötet csoport kiterjesztése"
 
 msgid "Failed to create logical volume: %s"
-msgstr ""
+msgstr "Nem sikerült létrehozni a logikai kötetet: %s"
 
 msgid "Failed to create physical volume: %s"
-msgstr ""
+msgstr "Nem sikerült létrehozni a fizikai kötetet: %s"
 
 msgid "Failed to create volume group: %s"
-msgstr ""
+msgstr "Nem sikerült létrehozni a kötet csoportot: %s"
 
 msgid "Failed to extend logical volume: %s"
-msgstr ""
+msgstr "Nem sikerült kiterjeszteni a logikai kötetet: %s"
 
 msgid "Failed to extend volume group: %s"
-msgstr ""
+msgstr "Nem sikerült kiterjeszteni a kötet csoportot: %s"
 
 msgid "Failed to reduce logical volume: %s"
-msgstr ""
+msgstr "Nem sikerült csökkenteni a logikai kötetet: %s"
 
 msgid "Failed to reduce volume group: %s"
-msgstr ""
+msgstr "Nem sikerült csökkenteni a kötet csoportot: %s"
 
 msgid "Failed to remove logical volume: %s"
 msgstr "Nem sikerült eltávolítani a logikai kötetet: %s"
@@ -110,13 +110,13 @@ msgid "Failed to remove volume group: %s"
 msgstr "Nem sikerült eltávolítani a kotet csoportot: %s"
 
 msgid "Failed to rename logical volume: %s"
-msgstr ""
+msgstr "Nem sikerült átnevezni a logikai kötetet: %s"
 
 msgid "Failed to rename volume group: %s"
-msgstr ""
+msgstr "Nem sikerült átnevezni a kötet csoportot: %s"
 
 msgid "Failed to resize physical volume: %s"
-msgstr ""
+msgstr "Nem sikerült átméretezni a fizikai kötetet: %s"
 
 msgid "Free"
 msgstr "Szabad"
@@ -155,7 +155,7 @@ msgid "Reduce volume group"
 msgstr "Kötet csoport csökkentése"
 
 msgid "Resize"
-msgstr ""
+msgstr "Átméretezés"
 
 msgid "Select a volume group ..."
 msgstr "Válassz ki egy kötet csoportot ..."
