--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/ru_RU/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/ru_RU/openmediavault-lvm2.po
@@ -6,14 +6,14 @@
 # Alexander Savchenko, 2014
 # Ichi <ichiperm@gmail.com>, 2012
 # mictian <ffrants@gmail.com>, 2012
-# артур Мудрых <arturmon82@gmail.com>, 2012
+# артур Мудрых <arturmon82@gmail.com>, 2012,2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-16 08:31+0000\n"
+"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -63,7 +63,7 @@ msgid "Do you really want to create the volume group?"
 msgstr "Вы действительно хотите создать группу томов?"
 
 msgid "Do you really want to resize the selected physical volume?"
-msgstr ""
+msgstr "Вы действительно хотите изменить выбранный физический том?"
 
 msgid "Edit logical volume"
 msgstr "Редактирование логического тома"
@@ -81,25 +81,25 @@ msgid "Extend volume group"
 msgstr "Увеличить группу томов"
 
 msgid "Failed to create logical volume: %s"
-msgstr ""
+msgstr "Не удалось создать логический том: %s"
 
 msgid "Failed to create physical volume: %s"
-msgstr ""
+msgstr "Не удалось создать физический том: %s"
 
 msgid "Failed to create volume group: %s"
-msgstr ""
+msgstr "Не удалось создать группу томов: %s"
 
 msgid "Failed to extend logical volume: %s"
-msgstr ""
+msgstr "Не удалось расширить логический том: %s"
 
 msgid "Failed to extend volume group: %s"
-msgstr ""
+msgstr "Не удалось расширить группу томов: %s"
 
 msgid "Failed to reduce logical volume: %s"
-msgstr ""
+msgstr "Не удалось уменьшить логический том: %s"
 
 msgid "Failed to reduce volume group: %s"
-msgstr ""
+msgstr "Не удалось уменьшить группу томов: %s"
 
 msgid "Failed to remove logical volume: %s"
 msgstr "Не удалось удалить логический том: %s"
@@ -111,13 +111,13 @@ msgid "Failed to remove volume group: %s"
 msgstr "Не удалось удалить группу томов: %s"
 
 msgid "Failed to rename logical volume: %s"
-msgstr ""
+msgstr "Не удалось переименовать логический том: %s"
 
 msgid "Failed to rename volume group: %s"
-msgstr ""
+msgstr "Не удалось переименовать группу томов: %s"
 
 msgid "Failed to resize physical volume: %s"
-msgstr ""
+msgstr "Не удалось изменить размер физического тома: %s"
 
 msgid "Free"
 msgstr "Свободно"
@@ -156,7 +156,7 @@ msgid "Reduce volume group"
 msgstr "Уменьшить группу томов"
 
 msgid "Resize"
-msgstr ""
+msgstr "Изменить размер"
 
 msgid "Select a volume group ..."
 msgstr "Выберите группу томов ..."
