--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/tr_TR/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/tr_TR/openmediavault-lvm2.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Serhat SUT <serhat.sut@gmail.com>, 2012-2014
+# Serhat SUT <serhat.sut@gmail.com>, 2012-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-03 19:30+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/projects/p/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,7 +60,7 @@ msgid "Do you really want to create the volume group?"
 msgstr "Bölüm grubu oluşturmak istediğinize emin misiniz?"
 
 msgid "Do you really want to resize the selected physical volume?"
-msgstr ""
+msgstr "Seçilen fiziksel bölümü yeniden boyutlandırmak istediğinize emin misiniz?"
 
 msgid "Edit logical volume"
 msgstr "Mantıksal bölümü düzenle"
@@ -78,25 +78,25 @@ msgid "Extend volume group"
 msgstr "Bölüm grubunu genişlet"
 
 msgid "Failed to create logical volume: %s"
-msgstr ""
+msgstr "Mantıksal bölüm oluşturma hatası: %s"
 
 msgid "Failed to create physical volume: %s"
-msgstr ""
+msgstr "Fiziksel bölüm oluşturma hatası: %s"
 
 msgid "Failed to create volume group: %s"
-msgstr ""
+msgstr "Bölüm grubu oluşturma hatası: %s"
 
 msgid "Failed to extend logical volume: %s"
-msgstr ""
+msgstr "Mantıksal bölüm genişletme hatası: %s"
 
 msgid "Failed to extend volume group: %s"
-msgstr ""
+msgstr "Bölüm grubu genişletme hatası: %s"
 
 msgid "Failed to reduce logical volume: %s"
-msgstr ""
+msgstr "Mantıksal bölüm küçültme hatası: %s"
 
 msgid "Failed to reduce volume group: %s"
-msgstr ""
+msgstr "Bölüm grubu küçültme hatası: %s"
 
 msgid "Failed to remove logical volume: %s"
 msgstr "Mantıksal bölüm kaldırılamadı : %s"
@@ -108,13 +108,13 @@ msgid "Failed to remove volume group: %s"
 msgstr "Bölüm grubu kaldırılamadı: %s"
 
 msgid "Failed to rename logical volume: %s"
-msgstr ""
+msgstr "Mantıksal bölüm yeniden isimlendirme hatası: %s"
 
 msgid "Failed to rename volume group: %s"
-msgstr ""
+msgstr "Bölüm grubu yeniden isimlendirme hatası: %s"
 
 msgid "Failed to resize physical volume: %s"
-msgstr ""
+msgstr "Fiziksel bölüm yeniden boyutlandırma hatası: %s"
 
 msgid "Free"
 msgstr "Boş"
@@ -153,7 +153,7 @@ msgid "Reduce volume group"
 msgstr "Bölüm grubunu küçült"
 
 msgid "Resize"
-msgstr ""
+msgstr "Yeniden boyutlandır"
 
 msgid "Select a volume group ..."
 msgstr "Bölüm grubu seç ..."
