--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/zh_CN/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/zh_CN/openmediavault-lvm2.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# songming <by@songming.me>, 2013-2014
+# songming <by@songming.me>, 2013-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-04 01:13+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,7 +60,7 @@ msgid "Do you really want to create the volume group?"
 msgstr "确认创建卷组？"
 
 msgid "Do you really want to resize the selected physical volume?"
-msgstr ""
+msgstr "确定要调整选中物理卷大小？"
 
 msgid "Edit logical volume"
 msgstr "编辑逻辑卷"
@@ -78,25 +78,25 @@ msgid "Extend volume group"
 msgstr "扩展卷组"
 
 msgid "Failed to create logical volume: %s"
-msgstr ""
+msgstr "创建逻辑卷: %s失败"
 
 msgid "Failed to create physical volume: %s"
-msgstr ""
+msgstr "创建物理卷: %s失败"
 
 msgid "Failed to create volume group: %s"
-msgstr ""
+msgstr "创建卷组: %s失败"
 
 msgid "Failed to extend logical volume: %s"
-msgstr ""
+msgstr "扩展逻辑卷: %s失败"
 
 msgid "Failed to extend volume group: %s"
-msgstr ""
+msgstr "扩展卷组: %s失败"
 
 msgid "Failed to reduce logical volume: %s"
-msgstr ""
+msgstr "缩减逻辑卷: %s失败"
 
 msgid "Failed to reduce volume group: %s"
-msgstr ""
+msgstr "缩减卷组: %s失败"
 
 msgid "Failed to remove logical volume: %s"
 msgstr "移除逻辑卷: %s失败"
@@ -108,13 +108,13 @@ msgid "Failed to remove volume group: %s"
 msgstr "移除卷组: %s失败"
 
 msgid "Failed to rename logical volume: %s"
-msgstr ""
+msgstr "重命名逻辑卷: %s失败"
 
 msgid "Failed to rename volume group: %s"
-msgstr ""
+msgstr "重命名卷组: %s失败"
 
 msgid "Failed to resize physical volume: %s"
-msgstr ""
+msgstr "调整物理卷: %s大小失败"
 
 msgid "Free"
 msgstr "空闲"
@@ -153,7 +153,7 @@ msgid "Reduce volume group"
 msgstr "缩减卷组"
 
 msgid "Resize"
-msgstr ""
+msgstr "调整大小"
 
 msgid "Select a volume group ..."
 msgstr "选择卷组 ..."
