--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/zh_TW/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/zh_TW/openmediavault-lvm2.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# kochin <kochinc@outlook.com>, 2013-2014
+# kochin <kochinc@outlook.com>, 2013-2015
 # kochin <kochinc@outlook.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-06-01 19:40+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-01 21:54+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,7 +61,7 @@ msgid "Do you really want to create the volume group?"
 msgstr "你真的要創建該磁碟群組？"
 
 msgid "Do you really want to resize the selected physical volume?"
-msgstr ""
+msgstr "你真的要調整該實體磁碟的大小嗎？"
 
 msgid "Edit logical volume"
 msgstr "編輯邏輯磁碟"
@@ -79,25 +79,25 @@ msgid "Extend volume group"
 msgstr "擴展磁碟群組"
 
 msgid "Failed to create logical volume: %s"
-msgstr ""
+msgstr "無法新建邏輯磁碟: %s"
 
 msgid "Failed to create physical volume: %s"
-msgstr ""
+msgstr "無法新建實體磁碟: %s"
 
 msgid "Failed to create volume group: %s"
-msgstr ""
+msgstr "無法新建磁碟群組: %s"
 
 msgid "Failed to extend logical volume: %s"
-msgstr ""
+msgstr "無法擴展邏輯磁碟: %s"
 
 msgid "Failed to extend volume group: %s"
-msgstr ""
+msgstr "無法擴展磁碟群組: %s"
 
 msgid "Failed to reduce logical volume: %s"
-msgstr ""
+msgstr "無法縮減邏輯磁碟: %s"
 
 msgid "Failed to reduce volume group: %s"
-msgstr ""
+msgstr "無法縮減磁碟群組: %s"
 
 msgid "Failed to remove logical volume: %s"
 msgstr "無法移除邏輯磁碟: %s"
@@ -109,13 +109,13 @@ msgid "Failed to remove volume group: %s"
 msgstr "無法移除磁碟群組: %s"
 
 msgid "Failed to rename logical volume: %s"
-msgstr ""
+msgstr "無法重新命名邏輯磁碟: %s"
 
 msgid "Failed to rename volume group: %s"
-msgstr ""
+msgstr "無法重新命名磁碟群組: %s"
 
 msgid "Failed to resize physical volume: %s"
-msgstr ""
+msgstr "無法調整實體磁碟的大小: %s"
 
 msgid "Free"
 msgstr "未用"
@@ -154,7 +154,7 @@ msgid "Reduce volume group"
 msgstr "縮減磁碟群組"
 
 msgid "Resize"
-msgstr ""
+msgstr "調整大小"
 
 msgid "Select a volume group ..."
 msgstr "選擇一個磁碟群組"
