--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.1) stable; urgency=low
+
+  * Fix some minor issues in the WebGUI.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 29 Jun 2015 22:12:31 +0200
+
 openmediavault (2.1) stable; urgency=low
 
   * Update locales.
