Fix bug in user control panel (UCP) when changing user settings.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,7 @@ openmediavault (2.1.1) stable; urgency=low
   * Fix some minor issues in the WebGUI.
   * Display the navigation bar again on tablet and touch devices
     because of sime display problems.
+  * Fix bug in user control panel (UCP) when changing user settings.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 29 Jun 2015 22:12:31 +0200
 
